[package]
name = "ethcore-ipc"
version = "1.4.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]
license = "GPL-3.0"

[features]

[dependencies]
ethcore-devtools = { path = "../../devtools" }
ethcore-util = { path = "../../util" }
semver = "0.2"
nanomsg = { git = "https://github.com/ethcore/nanomsg.rs.git" }

